cropper container fixes

--- a/_assets/sass/base/_cloudcannon.scss
+++ b/_assets/sass/base/_cloudcannon.scss
@@ -1,4 +1,4 @@
-.cropper-container {
+[class*="cropper-container"] {
   * + * {
     margin-top: 0;
   }
